jsoup changelog

*** Release 1.6.4 [PENDING]
 * Fixed an issue when determining the Windows-1254 character-set from a meta tag when run in the Turkish locale.
   <https://github.com/jhy/jsoup/issues/191>

 * Fixed whitespace preservation in <textarea> tags.
   <https://github.com/jhy/jsoup/issues/167>

*** Release 1.6.3 [2012-May-28]
 * Fixed parsing of group-or commas in CSS selectors, to correctly handle sub-queries containing commas.
   <https://github.com/jhy/jsoup/issues/179>

 * If a node has no parent, return null on previousSibling and nextSibling instead of throwing a null pointer exception.
   <https://github.com/jhy/jsoup/issues/184>

 * Updated Node.siblingNodes() and Element.siblingElements() to exclude the current node (a node is not its own sibling).

 * Fixed HTML entity parser to correctly parse entities like frac14 (letter + number combo).
   <https://github.com/jhy/jsoup/issues/145>

 * Fixed issue where contents of a script tag within a comment could be incorrectly parsed.
   <https://github.com/jhy/jsoup/issues/115>

 * Fixed GAE support: load HTML entities from a file on startup, instead of embedding in the class.

 * Fixed NPE when HTML fragment parsing a <style> tag
   <https://github.com/jhy/jsoup/issues/189>

 * Fixed issue with :all pseudo-tag in HTML sanitizer when cleaning tags previously defined in whitelist
   <https://github.com/jhy/jsoup/issues/156>

 * Fixed NPE in Parser.parseFragment() when context parameter is null.
   <https://github.com/jhy/jsoup/issues/195>

 * In HTML whitelists, when defining allowed attributes for a tag, automatically add the tag to the allowed list.

*** Release 1.6.2 [2012-Mar-27]
 * Added a simplified XML parsing mode, which can usefully parse valid and invalid XML, but does not enforce any HTML
   document structure or special tag behaviour.

 * Added the optional ability to track errors when tokenising and parsing.
